<resources>
    <string name="app_name">Agente Cidadão</string>


    <!-- Strings related to menu -->
    <string name="item_menu1">User</string>
    <string name="item_menu2">Sobre</string>
    <string name="item_menu3">Sair</string>

    <string name="madeBy">Desenvolvido por Weiner Silva</string>
    <string name="denounceTitlePhoto">Foto</string>
    <string name="denounceTitleLocation">Localização</string>
    <string name="denounceInputAddress">Endereço</string>
    <string name="denounceInputDescription">Descrição</string>
    <string name="denounceButtonCancel">Cancelar</string>
    <string name="denounceButtonSend">Enviar</string>
    <string name="denouncePhotoDescription">Foto da Denúncia</string>
    <string name="data">Data</string>
    <string name="text_fragment_denuncias">Denúncias</string>
    <string name="text_fragment_noticias">Notícias</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="error_connection">Sem conexão</string>
    <string name="error_request">Erro na requisição</string>
    <string name="error_invalid_password">Senha inválida</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="label_error_invalid_response">Resposta inválida do servidor</string>
    <string name="imageRemove">Remover Foto</string>
    <string name="imageChange">Alterar Foto</string>
    <string name="backgroundPhotoDescription">Imagem de Fundo</string>
    <string name="novadenuncia">novaDenuncia</string>
    <string name="title_activity_noticias">NoticiasActivity</string>

</resources>
