<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.dsdm.agentecidadao.activity.DenunciaActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:isScrollContainer="false"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/TILDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="250">

                    <EditText
                        android:id="@+id/DenounceDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/denounceInputDescription"
                        android:inputType="textCapSentences"
                        android:maxLength="250" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/TILAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="100">

                    <EditText
                        android:id="@+id/DenounceAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/denounceInputAddress"
                        android:inputType="textCapSentences"
                        android:maxLength="100" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/txtdata"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/dataatual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/txtPhotos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/denounceTitlePhoto"
                    android:textSize="20sp" />

                <RelativeLayout
                    android:id="@+id/llPhotos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/firstPhoto"
                        android:layout_width="64sp"
                        android:layout_height="64sp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="26dp"
                        android:layout_marginStart="26dp"
                        android:onClick="takePhoto"
                        android:background="@drawable/ic_add_photo"
                        android:contentDescription="@string/denouncePhotoDescription" />



                    <ImageView
                        android:id="@+id/viewfirstPhoto"
                        android:layout_width="144sp"
                        android:layout_height="144sp"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="26dp"

                         />




                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/PersistentFooter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/denounceButtonCancel" />

            <Button
                android:id="@+id/makeDenounce"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/denounceButtonSend" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />
    </RelativeLayout>


</RelativeLayout>